fixed the brackets overlapping issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,3 @@
-html, body {
-  width: 100%;
-  min-height: 100%;
-  font-family: "Arial", sans-serif;
-  background: #a2a2f7;
-  text-align: center;
-}
-.container {
-    text-align: center;
-    margin-bottom: 150px;
-}
-.hidden {
-    display: none;;
-}
 #newList {
     display: flex;
     flex-wrap: wrap;
@@ -61,13 +47,9 @@ html, body {
   margin-bottom: 30px;
   cursor: pointer;
 }
-.brackets > div {
-  vertical-align: top;
-  clear: both;
-}
 .brackets > div::after {
   content: '';
-  display: inline-block;
+  display: block;
   clear: both;
 }
 .brackets > div > div {
@@ -117,26 +99,8 @@ html, body {
 .brackets > .group3 {
   height: 320px;
 }
-.brackets > .group3 > div {
-  width: 32.7%;
-}
-.brackets > .group4 > div {
-  width: 24.5%;
-}
-.brackets > .group5 > div {
-  width: 19.6%;
-}
-.brackets > .group6 > div {
-  width: 16.3%;
-}
-.brackets > .group7 > div {
-  width: 14.2%;
-}
-.brackets > .group8 > div {
-  width: 12.5%;
-}
-.brackets > .group9 > div {
-  width: 11%;
+.brackets > .groups > div {
+  width: 180px;
 }
 .brackets > div > .r1 > div {
   height: 60px;
